--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
@@ -33,11 +34,14 @@
     "jest": "^24.9.0",
     "jest-styled-components": "^6.3.3",
     "node": "^12.11.0",
+    "normalize.css": "^8.0.1",
     "password-prompt": "^1.1.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-syntax-highlighter": "^11.0.2",
     "react-test-renderer": "^16.10.1",
     "scp2": "^0.5.0",
+    "style-loader": "^1.0.0",
     "styled-components": "^4.4.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
