--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest-styled-components": "^6.3.3",
     "node": "^12.11.0",
     "normalize.css": "^8.0.1",
+    "omtv-theme": "^3.0.1",
     "password-prompt": "^1.1.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
